Removed citation count from papers and updated paper list

--- a/cv.tex
+++ b/cv.tex
@@ -47,8 +47,8 @@
          \Huge\textbf{\textcolor{seaborn_bg_grey_half}{Edward Linscott}%
          }}                                                                                                                         \\
       \textit{Nationality  } & New Zealander          & \textit{Email  } & edward.linscott@epfl.ch                                  \\
-      \textit{Date of birth} & 26/11/1991             & \textit{Website} & \href{https://elinscott.github.io/}{elinscott.github.io} \\
-      & & \textit{Phone} & +41 79 678 9641
+      \textit{Date of birth} & 26/11/1991             & \textit{Phone} & +41 79 678 9641 \\
+      & & \textit{Website} & \href{https://elinscott.github.io/}{elinscott.github.io}
    \end{tabularx}
    \end{minipage}
    }
@@ -62,25 +62,22 @@
    \vspace{6pt}
 
    -- Completing a masters and PhD at the University of Cambridge, during which I developed methods and code associated with DFT+\emph{U} and dynamical mean field theory.
+    This work has continued during my postdoc with the development of the BLOR functional and a high-throughput study of Hubbard and Hunds parameters.
    \vspace{6pt}
 
-   -- The development and release of the \href{https://koopmans-functionals.org/}{koopmans} code, a package that implements Koopmans functionals. I am the lead author of this code.% By imposing a generalized piecewise energy condition, these functionals obtain spectral properties with comparable accuracy to GW at a fraction of the computational cost.
+   -- Developing and releasing the \href{https://koopmans-functionals.org/}{koopmans} code, a package that implements Koopmans functionals. I am the lead author of this code. The ``Advanced Quantum ESPRESSO tutorial: Hubbard and Koopmans functionals from linear response'' in late 2022 covered the use of this code, and had over 200 attendees. % By imposing a generalized piecewise energy condition, these functionals obtain spectral properties with comparable accuracy to GW at a fraction of the computational cost.
    \vspace{6pt}
 
-   -- Supervising Yannick Schubert for his master's project and thesis. He said that ``working with (Edward) was very motivating and the perfect start to a scientific career''.
+   -- Supervising Yannick Schubert for his master's project and thesis. He said that ``thanks to (Edward's) good choice of topics and guidance... achieving good results felt easy. Working with (Edward) was very motivating and a perfect start to a scientific career''.
    \vspace{6pt}
 
-   -- The development of the BLOR functional, a DFT+\emph{U}-type corrective functional that enforces the flat plane condition on localized subspaces, dispensing with the need for an ad hoc derivation from the Hubbard model
+   Broadly, my research investigates how we can improve the performance of density functional theory (DFT). Taking inspiration from known properties of the exact functional and our knowledge of the systemic errors of DFT, I (and others) have shown how we can construct inexpensive corrections to DFT that drastically improve its performance.
+
    \vspace{6pt}
-
-   Broadly, my research investigates how we can improve the performance of density functional theory (DFT). Inspired by known properties of the exact functional and the systemic errors of DFT, one can construct inexpensive corrections to DFT that drastically improve its performance.
-   \vspace{6pt}
-
-   I am now looking for further opportunities where I can apply my expertise in density functional approximation development and my coding skills.
-\end{tabularx}
-
+   I am now looking for further opportunities where I can apply my expertise in density functional approximation development and my coding skills to develop the next generation of state-of-the-art methods for computational quantum chemistry and materials science.
+\end{tabularx}%
 \setlength{\fboxsep}{5pt}%
-\setlength{\fboxrule}{0pt}
+\setlength{\fboxrule}{0pt}%
 
 \begin{tabularx}{\textwidth}{X}
    \cellcolor{seaborn_blue}\large\textbf{\textcolor{seaborn_bg_grey_half}{Research and Education}} \\
@@ -98,9 +95,7 @@
    \textit{Supervisor:} Prof. Nicola Marzari
    \\
    \rowcolor{seaborn_bg_grey_half}%
-   The goal of my current postdoc is to drive the ongoing development of Koopmans functionals. To this end, I have been one of the main developers of the \href{https://koopmans-functionals.org/}{koopmans} code, a package that (a) implements Koopmans functionals in \texttt{Quantum ESPRESSO} and (b) automates the various workflows that these functionals require.
-
-   Discuss BLOR
+   The goal of my current postdoc is to drive the ongoing development of Koopmans functionals. To this end, I have been one of the main developers of the \href{https://koopmans-functionals.org/}{koopmans} code, a package that (a) implements Koopmans functionals in \texttt{Quantum ESPRESSO} and (b) automates the various workflows that these functionals require. I also was involved in the development of the BLOR functional, a DFT+\emph{U}-type corrective functional that enforeces the flat plane condition on localized subspaces, dispensing with the need for an ad hoc derivation from the Hubbard model.
    \\
    %
    % PhD
@@ -125,10 +120,8 @@
    \\
    \cellcolor{seaborn_bg_grey}%
    % Many key reactions in biology are performed by metalloproteins. These systems are a challenge to accurately simulate due to two contrasting reasons. Firstly, the strong correlation present due to the transition metal atoms requires more accurate theories than semi-local DFT. And secondly the ambient protein environment requires explicit treatment of thousands of atoms at the quantum-mechanical level.
-   Over the course of my PhD I developed novel approaches within linear-response theory for determining Hubbard and Hund's parameters from first principles for DFT\,+\,\emph{U} calculations. I also developed a dynamical mean-field theory module for the linear scaling package ONETEP. I applied these tools to study (a) photodissociation of carboxy-heme (b) the electronic structure of hemocyanin, and (c) water-to-oxygen conversion performed by the oxygen evolving complex.
-\end{tabularx}
-\newpage
-\begin{tabularx}{\textwidth}{X}
+   I developed novel approaches within linear-response theory for determining Hubbard and Hund's parameters from first principles for DFT\,+\,\emph{U} calculations. I also developed a dynamical mean-field theory module for the linear scaling package ONETEP. I applied these tools to study (a) photodissociation of carboxy-heme (b) the electronic structure of hemocyanin, and (c) water-to-oxygen conversion performed by the oxygen evolving complex.
+   \\
    %
    % Masters
    %
@@ -164,7 +157,7 @@
    \textit{Supervisor:} Prof. P. Blair Blakie
    \\
    \rowcolor{seaborn_bg_grey_half}
-   I was briefly employed as a Research Assistant at the University of Otago, where I continued the work from my honours year studying the behaviour of dipolar Bose gases. This work resulted in a publication where we predicted an instability of dipolar BECs in regions of experimental interest.                                                          \\
+   I was briefly employed as a Research Assistant at the University of Otago, where I continued the work from my honours year studying the behaviour of quasi-2D dipolar Bose-Einstein condensates (BECs). This work resulted in a publication where we predicted an instability of dipolar BECs in regions of experimental interest.                                                          \\
    %
    % Hons
    %
@@ -176,7 +169,7 @@
    \textit{Supervisor:} Prof. P. Blair Blakie
    \\
    \cellcolor{seaborn_bg_grey_half}%
-   This one-year honours programme comprised of taught courses in physics and mathematics, and a research project. My research project explored the effects of temperature on the behaviour of quasi-2D dipolar Bose-Einstein condensates; that is, BECs whose atoms (a) interact with an appreciable magnetic dipole-dipole moment and (b) are contained within a 2D optical trap. I graduated with first-class honours.
+   This one-year honours programme was comprised of taught courses in physics and mathematics, and a research project exploring the effects of temperature on the stability of dipolar BECs. I graduated with first-class honours.
    \\
    %
    % BSc
@@ -225,9 +218,9 @@
    Used monthly                  & MPI, OpenMP                                                                                                                                                            &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
    Some experience               & C++, MATLAB, CUDA                                                                                                                                                      &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
-   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}I developed \href{https://koopmans-functionals.org}{koopmans}, an open-source package for performing Koopmans functional calculations. I am a contributor to \href{https://www.onetep.org}{ONETEP}, a commercially available scientific DFT code, and I am a developer of TOSCAM, a publically available DMFT code}       \\\noalign{\vskip-0.1pt}
+   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}I developed \href{https://koopmans-functionals.org}{koopmans}, an open-source package for performing Koopmans functional calculations. I am a contributor to \href{https://www.onetep.org}{ONETEP}, a commercially available scientific DFT code, and I am a developer of TOSCAM, a publically available DMFT code.}       \\\noalign{\vskip-0.1pt}
    \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}In addition to my formal training in scientific computing, during my PhD I sat in on \href{https://www.cl.cam.ac.uk/teaching/1718/L42/}{\emph{Machine Learning and Algorithims for Data Mining}}, a master's course on machine learning run by the Department of Computer Science and Technology at the University of Cambridge.}                                                            \\\noalign{\vskip-0.1pt}
-   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}I have participated in coding competitions such as \href{https://hashcode.withgoogle.com/}{Google Hash Code}, \href{https://projecteuler.net/}{Project Euler}, and \href{https://www.codingame.com/home}{CodinGame}}                                                                                                         \\\noalign{\vskip-0.1pt}
+   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}I have participated in coding competitions such as \href{https://hashcode.withgoogle.com/}{Google Hash Code}, \href{https://projecteuler.net/}{Project Euler}, and \href{https://www.codingame.com/home}{CodinGame}.}                                                                                                         \\\noalign{\vskip-0.1pt}
    \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey_half}\textbf{\textit{Packages and software}}}                                                                                                                                                                                                                                                                             \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey_half}
    Used daily                    & \multicolumn{2}{l}{vscode, Quantum ESPRESSO, ASE, vim, \LaTeX, SLURM, git                                                                                                                         }                                                                                                                                                                \\\noalign{\vskip-0.1pt}
@@ -260,7 +253,7 @@
    \rowcolor{seaborn_bg_grey_half}
    \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey_half}\textbf{\textit{Supervision and mentoring}}}                                                                                                                                                                                                                                                                             \\\noalign{\vskip-0.1pt}
    \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey_half}During my postdoc I have supervised the Masters project and dissertation of Yannick Schubert. He said that ``thanks to (Edward's) good choice of topics and guidance... achieving good results felt easy. Working with (Edward) was very motivating and a perfect start to a scientific career.''}                                                                                                                                                                                                                       \\*\noalign{\vskip-0.1pt}
-   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey_half}I also helped Hovan Lee (PhD student from King's College London) with his DMFT calculations on transferrin. A paper resulted from this work, for which I am the last author.}                                                                                                                                        \\*\noalign{\vskip-0.1pt}
+   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey_half}I also helped Hovan Lee (PhD student from King's College London) with his DMFT calculations on transferrin. A paper resulted from this work, of which I am the last author.}                                                                                                                                        \\*\noalign{\vskip-0.1pt}
    \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey_half}During the course of my PhD I provided support to two students. I spent a significant amount of time with M.\,A.\,Al-Badri (Masters, and then PhD student from King's College London), teaching him about DMFT and working with him on DMFT calculations on hemocyanin. I have hosted him in Cambridge twice, and visited him at KCL periodically. A paper resulted from this work. I was also the local port-of-call for S. Mansur (PhD student, Cambridge) for support running ONETEP calculations. This work has resulted in two publications.}                                                                                                                                                            \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
    \textbf{\textit{Outreach}}    &                                                                                                                                                                        &                                                                                                                                                                \\
@@ -272,25 +265,32 @@
 
 \newpage
 \begin{tabularx}{\textwidth}{
-      m{\dimexpr0.775\textwidth-2\tabcolsep}%
-      m{\dimexpr0.225\textwidth-2\tabcolsep}}
+   X}
+   %   m{\dimexpr0.775\textwidth-2\tabcolsep}%
+   %   m{\dimexpr0.225\textwidth-2\tabcolsep}}
    \rowcolor{seaborn_blue}
-   \multicolumn{2}{l}{\large\textcolor{seaborn_bg_grey_half}{\textbf{Publications}}}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            \\
-   R.\,De Gennaro, N.\,Colonna, EBL, and N.\,Marzari, \href{https://doi.org/10.1103/PhysRevB.106.035106}{\textit{Bloch's theorem in orbital-density-dependent functionals: Band structures from Koopmans spectral functionals}}. Phys. Rev. B 106 (2022)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      & 1 citation                                      \\
+   %\multicolumn{2}{l}{
+      \large\textcolor{seaborn_bg_grey_half}{\textbf{Publications}} 
+   %}
+   \\
+   A.\,Burgess, EBL, D.\,D.\,O'Regan, \href{https://arxiv.org/abs/2210.17404}{\textit{A DFT+U type functional derived to explicitly address the flat plane condition}}. arXiv:2210.17404 (2022)
+   \\
+   G.\,C.\,Moore, M.\,K.\,Horton, A.\,M.\,Ganose, M.\,Siron, EBL, D.\,D.\,O'Regan, K.\,A.\, Persson, \href{https://arxiv.org/abs/2201.04213}{\textit{High-throughput determination of Hubbard U and Hund J values for transition metal oxides via linear response formalism}}. arXiv:2201.04213 (2022) \\
+   N.\,Colonna, R.\,De Gennaro, EBL, and N.\,Marzari, \href{https://pubs.acs.org/doi/10.1021/acs.jctc.2c00161}{\textit{Koopmans spectral functionals in periodic-boundary conditions}}. J. Chem. Theory Comput. 18 (2022)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 \\ %&                                                 \\
+   R.\,De Gennaro, N.\,Colonna, EBL, and N.\,Marzari, \href{https://doi.org/10.1103/PhysRevB.106.035106}{\textit{Bloch's theorem in orbital-density-dependent functionals: Band structures from Koopmans spectral functionals}}. Phys. Rev. B 106 (2022)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      \\ % & 1 citation                                      \\
    % 
-   H.\,Lee, C.\,Weber, and EBL, \href{https://doi.org/10.1021/acs.jpclett.2c00680}{\textit{Many-body study of Iron (III)-bound human serum transferrin}}. J. Phys. Chem. Lett. 13 (2022)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      &                                                 \\
+   H.\,Lee, C.\,Weber, and EBL, \href{https://doi.org/10.1021/acs.jpclett.2c00680}{\textit{Many-body study of Iron (III)-bound human serum transferrin}}. J. Phys. Chem. Lett. 13 (2022)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      \\ % &                                                 \\
    % 
-   N.\,Colonna, R.\,De Gennaro, EBL, and N.\,Marzari, \href{https://arxiv.org/abs/2202.08155}{\textit{Koopmans spectral functionals in periodic-boundary conditions}} arXiv:2202.08155 (2021)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 &                                                 \\
    % 
-   R.\,Kobayashi, T\,P.\,M.\,Goumans, N.\,Ole Carstensen, T.\,M.\,Soini, N.\,Marzari, I.\,Timrov, S.\,Ponc\'e, EBL, C.\,J.\,Sewell, G.\,Pizzi, F.\,Ramirez, M.\,Bercx, S.\,P.\,. Huber, C.\,S.\,Adorf, and L.\,Talirz, \href{https://doi.org/10.1021/acs.jchemed.1c00655}{\textit{Virtual computational chemistry teaching laboratories – hands-on at a distance}} J. Chem. Educ. 98 (2021)                                                                                                                                                                                                                                                                                                                                                                   & 8 citations                                     \\
+   R.\,Kobayashi, T\,P.\,M.\,Goumans, N.\,Ole Carstensen, T.\,M.\,Soini, N.\,Marzari, I.\,Timrov, S.\,Ponc\'e, EBL, C.\,J.\,Sewell, G.\,Pizzi, F.\,Ramirez, M.\,Bercx, S.\,P.\,. Huber, C.\,S.\,Adorf, and L.\,Talirz, \href{https://doi.org/10.1021/acs.jchemed.1c00655}{\textit{Virtual computational chemistry teaching laboratories – hands-on at a distance}} J. Chem. Educ. 98 (2021)                                                                                                                                                                                                                                                                                                                                                                   \\ %& 8 citations                                     \\
    % 
-   EBL, D.\,J.\,Cole, N.\,D.\,M.\,Hine, M.\,C.\,Payne, and C.\,Weber, \href{https://doi.org/10.1021/acs.jctc.0c00162}{\textit{ONETEP + TOSCAM: uniting dynamical mean field theory and linear-scaling density functional theory}} J. Chem. Theory Comput. 16 (2020)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           & 5 citations                                     \\
-   S.\,M.\ Masur, EBL, and C.\,J.\ Edgcombe, \href{https://www.sciencedirect.com/science/article/pii/S036820481930221X}{\textit{Modelling a capped carbon nanotube by linear-scaling density-functional theory}}, J. Electron Spectrosc. Relat. Phenom. 241 (2020) 146896                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     & 3 citations                                     \\
-   J.\,C.\,A.\ Prentice, J.\ Aarons, J.\,C.\ Womack, A.\,E.\,A.\ Allen, L.\ Andrinopoulos, L.\ Anton, R.\,A.\ Bell, A.\ Bhandari, G.\,A.\ Bramley, R.\,J.\ Charlton, R.\,J.\ Clements, D.\,J.\ Cole, G.\ Constantinescu, F.\ Corsetti, S.\,M-M.\ Dubois, K.\,K.\,B.\ Duff, J.\ María Escartín, A.\ Greco, Q.\ Hill, L.\,P.\ Lee, EBL, D.\,D.\ O’Regan, M.\,J.\,S.\ Phipps, L.\,E.\ Ratcliff, Á. Ruiz Serrano, E.\,W.\ Tait, G.\ Teobaldi, V.\ Vitale, N.\ Yeung, T.\,J.\ Zuehlsdorff, J.\ Dziedzic, P.\,D.\ Haynes, N.\,D.\,M.\ Hine, A.\,A.\ Mostofi, M.\,C.\ Payne, and C.-K.\ Skylaris, \href{https://aip.scitation.org/doi/full/10.1063/5.0004445}{\textit{The ONETEP linear-scaling density functional theory program}}. J. Chem. Phys. 52 (2020) 174111 & 73 citations                                    \\
-   M.\,A.\,al-Badri, EBL, A.\,Georges, D.\,J.\,Cole, and C.\,Weber, \href{https://www.nature.com/articles/s42005-019-0270-1}{\textit{Superexchange mechanism and quantum many body excitations in the archetypal di-Cu oxo-bridge}}. Comm. Phys. 3 (2020) 4                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   & 7 citations                                     \\
-   C.\,J.\,Edgcombe, S.\,M.\,Masur, EBL, J.\,Whaley-Baldwin, and C.\,H.\,W.\,Barnes, \href{https://www.sciencedirect.com/science/article/pii/S0304399118302833}{\textit{Analysis of a capped carbon nanotube by linear-scaling density-functional theory}}. Ultramicroscopy 198 (2019) 26                                                                                                                                                                                                                                                                                                                                                                                                                                                                     & 14 citations                                    \\
-   EBL, D.\,J.\,Cole, M.\,C.\,Payne, and D.\,D.\,O'Regan, \href{https://journals.aps.org/prb/abstract/10.1103/PhysRevB.98.235157}{\textit{Role of spin in the calculation of Hubbard U and Hund’s J parameters from first principles}}. Phys. Rev. B 98 (2018) 235157                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         & 33 citations                                    \\
-   EBL and P.\,B.\,Blakie, \href{https://journals.aps.org/pra/pdf/10.1103/PhysRevA.90.053605}{\textit{Thermally activated local collapse of a flattened dipolar condensate}}. Phys. Rev.~A 90 (2014) 053605                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   & 9 citations; selected as an Editors' Suggestion
+   EBL, D.\,J.\,Cole, N.\,D.\,M.\,Hine, M.\,C.\,Payne, and C.\,Weber, \href{https://doi.org/10.1021/acs.jctc.0c00162}{\textit{ONETEP + TOSCAM: uniting dynamical mean field theory and linear-scaling density functional theory}} J. Chem. Theory Comput. 16 (2020)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           \\ %& 5 citations                                     \\
+   S.\,M.\ Masur, EBL, and C.\,J.\ Edgcombe, \href{https://www.sciencedirect.com/science/article/pii/S036820481930221X}{\textit{Modelling a capped carbon nanotube by linear-scaling density-functional theory}}, J. Electron Spectrosc. Relat. Phenom. 241 (2020) 146896                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \\ %& 3 citations                                     \\
+   J.\,C.\,A.\ Prentice, J.\ Aarons, J.\,C.\ Womack, A.\,E.\,A.\ Allen, L.\ Andrinopoulos, L.\ Anton, R.\,A.\ Bell, A.\ Bhandari, G.\,A.\ Bramley, R.\,J.\ Charlton, R.\,J.\ Clements, D.\,J.\ Cole, G.\ Constantinescu, F.\ Corsetti, S.\,M-M.\ Dubois, K.\,K.\,B.\ Duff, J.\ María Escartín, A.\ Greco, Q.\ Hill, L.\,P.\ Lee, EBL, D.\,D.\ O’Regan, M.\,J.\,S.\ Phipps, L.\,E.\ Ratcliff, Á. Ruiz Serrano, E.\,W.\ Tait, G.\ Teobaldi, V.\ Vitale, N.\ Yeung, T.\,J.\ Zuehlsdorff, J.\ Dziedzic, P.\,D.\ Haynes, N.\,D.\,M.\ Hine, A.\,A.\ Mostofi, M.\,C.\ Payne, and C.-K.\ Skylaris, \href{https://aip.scitation.org/doi/full/10.1063/5.0004445}{\textit{The ONETEP linear-scaling density functional theory program}}. J. Chem. Phys. 52 (2020) 174111 \\ %& 73 citations                                    \\
+   M.\,A.\,al-Badri, EBL, A.\,Georges, D.\,J.\,Cole, and C.\,Weber, \href{https://www.nature.com/articles/s42005-019-0270-1}{\textit{Superexchange mechanism and quantum many body excitations in the archetypal di-Cu oxo-bridge}}. Comm. Phys. 3 (2020) 4                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   \\ %& 7 citations                                     \\
+   C.\,J.\,Edgcombe, S.\,M.\,Masur, EBL, J.\,Whaley-Baldwin, and C.\,H.\,W.\,Barnes, \href{https://www.sciencedirect.com/science/article/pii/S0304399118302833}{\textit{Analysis of a capped carbon nanotube by linear-scaling density-functional theory}}. Ultramicroscopy 198 (2019) 26                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \\ %& 14 citations                                    \\
+   EBL, D.\,J.\,Cole, M.\,C.\,Payne, and D.\,D.\,O'Regan, \href{https://journals.aps.org/prb/abstract/10.1103/PhysRevB.98.235157}{\textit{Role of spin in the calculation of Hubbard U and Hund’s J parameters from first principles}}. Phys. Rev. B 98 (2018) 235157                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         \\ %& 33 citations                                    \\
+   EBL and P.\,B.\,Blakie, \href{https://journals.aps.org/pra/pdf/10.1103/PhysRevA.90.053605}{\textit{Thermally activated local collapse of a flattened dipolar condensate}}. Phys. Rev.~A 90 (2014) 053605                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   \\ % & 9 citations; selected as an Editors' Suggestion
 \end{tabularx}
 
 \begin{tabularx}{\textwidth}{
@@ -313,8 +313,6 @@
                  & \textit{University of Canterbury Mathematics Scholarship} for study at the University of Canterbury (not taken up)        & \euro2,500                 \\
                  & \textit{University of Canterbury Science Scholarship} for study at the University of Canterbury (not taken up)            & \euro600                   \\
 \end{tabularx}
-
-\newpage
 
 \begin{tabularx}{\textwidth}{l m{0.9\textwidth}}
    \rowcolor{seaborn_blue}
@@ -344,10 +342,11 @@
    \rowcolor{seaborn_blue}
    \multicolumn{4}{l}{\large\textcolor{seaborn_bg_grey_half}{\textbf{Conferences, Seminars, Schools, and Workshops}}}                                              \\
    \textbf{Year} & \textbf{Event}                                                                                      & \textbf{Location} & \textbf{Contribution} \\
-   {2022}        & 9\textsuperscript{th} Time-Dependent Density-Functional Theory Workshop: Prospects and Applications & Benasque          & Invited talk          \\
+   {2022}        & Advanced Quantum ESPRESSO tutorial: Hubbard and Koopmans functionals from linear response & Virtual & Invited talk; tutor \\
+                 & 9\textsuperscript{th} Time-Dependent Density-Functional Theory Workshop: Prospects and Applications & Benasque          & Invited talk          \\
                  & DFT2022                                                                                             & Brussels          & Contributed talk      \\
                  & Psi-K conference                                                                                    & Lausanne          & Poster                \\
-   {2021}
+   {2021} & ASE/Fireworks workshop on high-throughput workflows & Copenhagen & Poster \\
                  & Quantum Theory of Materials Seminar                                                                 & Dublin            & Invited talk          \\
                  & APS March Meeting                                                                                   & Virtual           & Contributed talk      \\
                  & Virtual Winter School on Computational Chemistry                                                    & Virtual           & Tutor                 \\
@@ -378,7 +377,6 @@
 %    I am a violinist, and have been a member (and concertmaster) of many orchestras including the New Zealand Symphony Secondary Schools Orchestra, the Christchurch Youth Orchestra, and the Cambridge Musical Society Symphony Orchestra. I love the outdoors and am an avid runner, cyclist, camper, and hiker.%  I enjoy pub quizzes (having run several for my college's postgraduate community)
 % \end{tabularx}
 
-\newpage
 \begin{tabularx}{\textwidth}{
       m{\dimexpr0.1\textwidth-2\tabcolsep}
       m{\dimexpr0.45\textwidth-2\tabcolsep}
